--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "homepage": "https://github.com/Juxn89/nodejs-backend-microservices#readme",
   "dependencies": {
     "dotenv": "16.3.1",
-    "express": "4.18.2"
+    "express": "4.18.2",
+    "nanoid": "2.1.7",
+    "swagger-ui-express": "5.0.0"
   }
 }
